--- a/contact.html
+++ b/contact.html
@@ -36,58 +36,52 @@
 						</div>
 						<nav id="nav">
 							<ul>
-								<li class="active"><a href="index.html">Homepage</a></li>
-								<li><a href="professionalskills.html">Professional Skills</a></li>
-								<li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="index.html">Homepage</a></li>
+                <li><a href="professionalskills.html">Professional Skills</a></li>
+                <li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
 
-				<!-- Banner -->
-					<div id="banner" class="container">
-						<section>
-							<p>Hi, I'm <strong>Erin Dawn</strong>, a freelance circus performer and coach. I'm worked iN New York, USA, Melbourne, Australia and Auckland, New Zealand. I'm available to book for performances, corporate events, private functions, trainings and workshops. Follow me on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
-						</section>
-					</div>
 
-				<!-- Extra -->
-					<div id="extra">
-						<div class="container">
-							<div class="row no-collapse-1">
-								<section class="4u"> <a href="#" class="image featured"><img src="images\staffshow (3).jpg" alt=""></a>
-									<div class="box">
-										<p>Check out my showreel for a quick overview of my recent crusades.</p>
-										<a href="showreel.html" class="button">Showreel</a> </div>
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images\catch2.jpg
-								" alt=""></a>
-									<div class="box">
-										<p>My gallery provides pictures to illustrate my skills and performances.</p>
-										<a href="gallery.html" class="button">Gallery</a> </div>
-								</section>
-								<section class="4u"> <a href="#" class="image featured"><img src="images\yoyo.jpg" alt=""></a>
-									<div class="box">
-										<p>For more information on my coaching services please view the accompanying link.</p>
-										<a href="training.html" class="button">Training</a> </div>
-								</section>
-							</div>
-						</div>
-					</div>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="container">
-							<div class="row">
-
-								<!-- Content -->
-							</div>
-						</div>
-					</div>
-
-	</div>
 
 	<!-- Footer -->
-
+		<div id="footer" class="wrapper style2">
+			<div class="container">
+				<section>
+					<header class="major">
+						<h2>Contact</h2>
+						<span class="byline">Leave a message for bookings or enquiries</span>
+					</header>
+					<form method="post" action="#">
+						<div class="row half">
+							<div class="12u">
+								<input class="text" type="text" name="name" id="name" placeholder="Name" />
+							</div>
+						</div>
+						<div class="row half">
+							<div class="12u">
+								<input class="text" type="text" name="email" id="email" placeholder="Email" />
+							</div>
+						</div>
+						<div class="row half">
+							<div class="12u">
+								<textarea name="message" id="message" placeholder="Message"></textarea>
+							</div>
+						</div>
+						<div class="row half">
+							<div class="12u">
+								<ul class="actions">
+									<li>
+										<input type="submit" value="Send Message" class="button alt" />
+									</li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</section>
+			</div>
+		</div>
 
 	<!-- Copyright -->
 		<div id="copyright">
