--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Phase Shift by TEMPLATED</title>
+
+		<title>Erin Dawn:Circus Arts Gallery</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -55,9 +56,47 @@
 										<h2>Gallery</h2>
 										<span class="byline">Erin Dawn: Circus Arts</span>
 									</header>
-									<p>CONTENT UNDER CONSTRUCTION</p>
-									<p></p>
-									<p></p>
+									<table>
+										<thead colspan =3> Erin Dawn Circus Arts </thead>
+										<tbody>
+
+											<tr>
+													<td><li><a href="#"><img src="images/catch2.jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+													<td><li><a href="#"><img src="images/catch1.jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+													<td><a href="#"><img src="images/catching.jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+											</tr>
+											<tr>
+													<td><li><a href="#"><img src="images/staffshow (5).jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+													<td><li><a href="#"><img src="images/staffshow (3).jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+													<td><li><a href="#"><img src="images/staffshow (1).jpg
+													" style="width:304px;height:228px;" alt=""></a></li></td>
+											</tr>
+											<tr>
+												<td><li><a href="#"><img src="images/staffshow.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+												<td><li><a href="#"><img src="images/KellyBros.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+												<td><li><a href="#"><img src="images/KellyBros2.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+											</tr>
+											<tr>
+												<td><li><a href="#"><img src="images/KellyBros3.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+												<td><li><a href="#"><img src="images/KellyBros4.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+												<td><li><a href="#"><img src="images/KellyBros5.jpg
+												" style="width:304px;height:228px;" alt=""></a></li></td>
+											</tr>
+
+
+
+										</tbody>
+									</table>
 								</section>
 							</div>
 
@@ -65,16 +104,15 @@
 							<div id="sidebar" class="4u">
 								<section>
 									<header class="major">
-										<h2>Other Links</h2>
+										<h2></h2>
 									</header>
 									<ul class="default">
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
-										<li><a href="#">LINK</a></li>
+
+
+
+
+
+
 									</ul>
 								</section>
 							</div>
