various language and grammar fixes /n fixed footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phase Shift by TEMPLATED</title>
+		<title>Erin Dawn - Circus Extraordinaire</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -46,7 +46,7 @@
 				<!-- Banner -->
 					<div id="banner" class="container">
 						<section>
-							<p>Hi, I'm <strong>Erin Dawn</strong>, a freelance circus performer and coach. I'm worked iN New York, USA, Melbourne, Australia and Auckland, New Zealand. I'm available to book for performances, corporate events, private functions, trainings and workshops. Follow me on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
+							<p>Hi, I'm <strong>Erin Dawn</strong>, a freelance circus performer and coach. I've worked in New York, USA, Melbourne, Australia and Auckland, New Zealand. I'm available to book for performances, corporate events, private functions, training and workshops. Follow me on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
 						</section>
 					</div>
 
@@ -56,18 +56,18 @@
 							<div class="row no-collapse-1">
 								<section class="4u"> <a href="#" class="image featured"><img src="images\staffshow (3).jpg" alt=""></a>
 									<div class="box">
-										<p>Check out my showreel for a quick overview of my recent crusades.</p>
+										<p>Check out my showreel for a quick overview of my recent escapades.</p>
 										<a href="showreel.html" class="button">Showreel</a> </div>
 								</section>
 								<section class="4u"> <a href="#" class="image featured"><img src="images\catch2.jpg
 								" alt=""></a>
 									<div class="box">
-										<p>My gallery provides pictures to illustrate my skills and performances.</p>
+										<p>My gallery showcases some of my favourite moments.</p>
 										<a href="gallery.html" class="button">Gallery</a> </div>
 								</section>
 								<section class="4u"> <a href="#" class="image featured"><img src="images\yoyo.jpg" alt=""></a>
 									<div class="box">
-										<p>For more information on my coaching services please view the accompanying link.</p>
+										<p>Feeling up to the challenge? See what I can teach you!</p>
 										<a href="training.html" class="button">Training</a> </div>
 								</section>
 							</div>
