--- a/professionalskills.html
+++ b/professionalskills.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Phase Shift by TEMPLATED</title>
+		<title>Skills</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -51,8 +51,8 @@
 								<h2>Professional Skills</h2>
 								<span class="byline">Erin Dawn</span>
 							</header>
-							<p>A qualified personal trainer with a focus on circus skills Erin is fully qualified to teach professional classes over a range of circus disciplines</p>
-							<p>Erin has taught at French Woods Festival in New York. She has insturucted in a number of circus disciplines including:</p>
+							<p>Erin is a trainer at French Woods Festival in New York and is fully qualified to teach professional classes covering a range of circus disciplines.</p>
+							<p>She is an instructor in the following disciplines:</p>
                 <li>Static Trapeze</li>
                 <li>Doubles Trapeze
                 <li>Dance Trapeze</li>
@@ -62,10 +62,10 @@
                 <li>Aerial Silks</li>
                 <li>Trick Bike</li>
                 <li>Globe and Rolla Bolla</li>
-                <li>Trampolining</li>
+                <li>Trampoline</li>
                 <li>Chinese Pole</li>
-
-              <p>Erin also holds a current first aid certificate and cpr certificate.</p>
+				<p>   </p>
+							<p>Erin also holds a current First Aid certificate and CPR certificate.</p>
 						</section>
 					</div>
 				<!-- /Page -->
@@ -74,7 +74,9 @@
 					<div id="main">
 						<div class="container">
 							<div class="row">
-
+							</div>
+						</div>
+					</div>
 								<!-- Content -->
 
 				<!-- /Main -->
