--- a/training.html
+++ b/training.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Phase Shift by TEMPLATED</title>
+		<title>Training</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -51,9 +51,10 @@
 								<h2>Coaching and Workshops</h2>
 								<span class="byline">Erin Dawn</span>
 							</header>
-							<p>Erin Dawn has been involved in coaching and training others for many years. As a qualified personal trainer she is passionate about helping each individual reach their potential and consistently improve. Specialing in Static Trapeze, Double Trapeze and Lyra, Erin also teaches Aerial Silks, Swinging Trapeze, Chinese Pole, Acrobatics and Circus Conditioning.</p>
-							<p> Erin teaches annually at French Woods festival in New York and has been involved in teaching independant workshops in Auckland, New Zealand.</p>
-							<p>Erin is available for workshops and one off trainings. Please contact Erin for further information.</p>
+							<p>Erin Dawn has been involved in coaching and training for years. A qualified personal trainer - she is passionate about helping everyone achieve their potential.</p>
+							<p>Specialising in Static Trapeze, Double Trapeze and Lyra, Erin also teaches Aerial Silks, Swinging Trapeze, Chinese Pole, Acrobatics and Circus Conditioning.</p>
+							<p> Erin teaches annually at French Woods festival in New York and has been involved in teaching independent workshops in Auckland, New Zealand.</p>
+							<p>Erin is available for workshops and one off trainings. Please head over to <a href="contact.html">Contact</a> for further information.</p>
 						</section>
 					</div>
 				<!-- /Page -->
@@ -62,6 +63,10 @@
 					<div id="main">
 						<div class="container">
 							<div class="row">
+							</div>
+						</div>
+					</div>
+
 
 								<!-- Content -->
 
