--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phase Shift by TEMPLATED</title>
+		<title>Contact</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -42,6 +42,7 @@
 							</ul>
 						</nav>
 					</div>
+			</div>
 
 
 
