--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 
-		<title>Erin Dawn:Circus Arts Gallery</title>
+		<title>Erin Dawn: Circus Arts Gallery</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -125,6 +125,9 @@
 					<div id="main">
 						<div class="container">
 							<div class="row">
+							</div>
+						</div>
+					</div>
 
 								<!-- Content -->
 
